upgrade lib, include Spring boot 2, Spring 5, JDK11