@@ -11,21 +11,24 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <spring.boot.version>1.5.9.RELEASE</spring.boot.version>
+        <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
         <jersey.version>2.26</jersey.version>
-        <spring.version>5.0.2.RELEASE</spring.version>
-        <HikariCP.version>2.6.3</HikariCP.version>
-        <mysql.driver.version>5.1.38</mysql.driver.version>
-        <jackson.version>2.8.9</jackson.version>
-        <jetty.version>9.4.8.v20171121</jetty.version>
+        <spring.version>5.1.5.RELEASE</spring.version>
+        <HikariCP.version>3.3.1</HikariCP.version>
+        <mysql.driver.version>8.0.15</mysql.driver.version>
+        <jackson.version>2.9.8</jackson.version>
+        <jetty.version>9.4.15.v20190215</jetty.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <google.guava.version>23.6-jre</google.guava.version>
-        <google.gson.version>2.8.1</google.gson.version>
+        <google.guava.version>27.0.1-jre</google.guava.version>
+        <google.gson.version>2.8.5</google.gson.version>
         <dozer.version>5.5.1</dozer.version>
+        <hibernate-validator.version>6.0.15.Final</hibernate-validator.version>
         <ehcache.version>3.4.0</ehcache.version>
         <javax-cache.version>1.1.0</javax-cache.version>
         <commons-jexl.version>1.1</commons-jexl.version>
-        <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
+        <org.webjars.bootstrap.version>4.3.1</org.webjars.bootstrap.version>
+        <org.webjars.jquery.version>3.3.1-2</org.webjars.jquery.version>
+        <thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>
         <thymeleaf-extras-springsecurity4.version>3.0.2.RELEASE</thymeleaf-extras-springsecurity4.version>
         <thymeleaf-layout-dialect.version>2.2.2</thymeleaf-layout-dialect.version>
         <junit.version>4.12</junit.version>
@@ -34,9 +37,9 @@
         <!--
         Performance, two component, metric and perf4j, they are two different system, no relationship
         -->
-        <metrics.version>3.2.5</metrics.version>
+        <metrics.version>4.0.5</metrics.version>
         <perf4j.version>0.9.16</perf4j.version>
-        <jmxtrans.version>1.2.7</jmxtrans.version>
+        <jmxtrans.version>1.2.8</jmxtrans.version>
 
 
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
@@ -75,6 +78,12 @@
                     <artifactId>tomcat-jdbc</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-properties-migrator</artifactId>
+            <version>${spring.boot.version}</version>
         </dependency>
 
         <!-- DB related -->
@@ -278,7 +287,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.4.1.Final</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
 
         <!--cache-->
@@ -315,7 +324,7 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>3.3.7</version>
+            <version>${org.webjars.bootstrap.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.webjars</groupId>
@@ -327,7 +336,7 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
-            <version>3.2.1</version>
+            <version>${org.webjars.jquery.version}</version>
         </dependency>
 
         <!-- Spring Security -->
@@ -374,6 +383,12 @@
             <artifactId>metrics-jetty9</artifactId>
             <version>${metrics.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-jmx</artifactId>
+            <version>${metrics.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.perf4j</groupId>
@@ -388,11 +403,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.jmxtrans.agent/jmxtrans-agent -->
-        <dependency>
-            <groupId>org.jmxtrans.agent</groupId>
-            <artifactId>jmxtrans-agent</artifactId>
-            <version>${jmxtrans.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.jmxtrans.agent</groupId>-->
+            <!--<artifactId>jmxtrans-agent</artifactId>-->
+            <!--<version>${jmxtrans.version}</version>-->
+        <!--</dependency>-->
 
         <!--test-->
         <dependency>
@@ -406,6 +421,42 @@
             <artifactId>easymock</artifactId>
             <version>${easymock.version}</version>
         </dependency>
+
+        <!--JDK11 upgrade-->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>javax.activation</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+        <!--Spring boot 2.0 upgrade-->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -413,17 +464,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
+                <version>3.1.1</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -437,7 +487,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.1.1</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -455,13 +505,13 @@
                 <!--run /mvn install/ command first-->
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.4.0.905</version>
+                <version>3.6.0.1398</version>
             </plugin>
 
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.9</version>
+                <version>0.8.3</version>
                 <executions>
                     <!--
                        准备指向Jacoco运行时Agent的属性，在测试执行之前传递给虚拟机参数
@@ -501,14 +551,25 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>3.0.0-M3</version>
                 <configuration>
-                    <!-- 设置虚拟机参数 -->
-                    <argLine>${surefireArgLine}</argLine>
-                    <!-- 排除集成测试的代码. -->
+                    <argLine>--illegal-access=permit</argLine>
+                    <includes>
+                        <include>**/*Tests.java</include>
+                        <include>**/*Test.java</include>
+                    </includes>
                     <excludes>
-                        <exclude>**/IT*.java</exclude>
+                        <exclude>**/Abstract*.java</exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <argLine>--illegal-access=permit</argLine>
                 </configuration>
             </plugin>
         </plugins>
